# calculator-app

./: CMakeLists.txt  README.md
src/: Buffer.cpp  Buffer.h  CMakeLists.txt  Calculator.cpp  Calculator.h  CalculatorFactory.cpp  CalculatorFactory.h  Constants.h  FontLoader.cpp  FontLoader.h  FontStorage.cpp  FontStorage.h  Input.cpp  Input.h  InputKey.h  Interaction.cpp  Interaction.h  InteractionHandler.cpp  InteractionHandler.h  IntersectedTileInformation.h  IntersectedTileInformationInterpreter.cpp  IntersectedTileInformationInterpreter.h  LayoutCharacter.h  Main.cpp  OperationSolver.cpp  OperationSolver.h  RectangleSfml.cpp  RectangleSfml.h  TextSfml.cpp  TextSfml.h  Tile.cpp  Tile.h  TileCreator.cpp  TileCreator.h  Tiles.cpp  Tiles.h  TilesLayout.cpp  TilesLayout.h  UserInputReader.cpp  UserInputReader.h
src/exceptions/: CannotAccessFontFile.h  FontNotAvailable.h  LayoutCharacterNotFound.h
